--- a/index.html
+++ b/index.html
@@ -1,9 +1,16 @@
 <html>
    <!---Matt Fay 12-21-2024  -->
+<head>
+    <title>
+        40kStats
+        </title>
+
+</head>
+
+
+
+   <body style="text-align: center;"></body>
 <header>
-<title>
-40kStats
-</title>
 <nav>
     <h2>
         Navigation:<br></h2>
@@ -17,7 +24,7 @@
 
 
 
-<body style="text-align: center;">
+
     <h2>40k Shooting Dice</h2>
     <input id="BSkill" type="number" min="1" value="4"></input>
     <label for="BSkill">Ballistic Skill</label><br>
@@ -35,12 +42,15 @@
     <button id="rollToWound" onclick="rollToWound()">To Wound</button><br>
     <p id="yourWounds"></p>
 
+    <footer>
+        mattFay<br>
+        University of Advanced Technology<br>
+        2625 W Baseline Rd, Tempe, AZ 85283<br>
 
+        </footer>
 </body>
 
-<footer>
-mattFay<br>
-</footer>
+
 <script src="code.js"></script>
 <link rel="stylesheet" type="text/css" href="style.css">
 </html>
