--- a/page3.html
+++ b/page3.html
@@ -1,22 +1,25 @@
 <html>
-<header>
+<head>
 <title>
 Space Marines
 </title>
-<nav>
-    <h2>
-        Navigation:<br> </h2>
-        <a href="./index.html">Home</a><br>
-        <a href="./page2.html">Demons</a><br>
-        <a href="./page3.html">Space Marines</a><br>
-        <a href="./page4.html">Allies</a><br>
-   
-</nav>
-</header>
+</head>
 
 
 
 <body style="text-align: center;">
+    <header>
+        <nav>
+            <h2>
+                Navigation:<br> </h2>
+                <a href="./index.html">Home</a><br>
+                <a href="./page2.html">Demons</a><br>
+                <a href="./page3.html">Space Marines</a><br>
+                <a href="./page4.html">Allies</a><br>
+           
+        </nav>
+        </header>
+        
     <h1>Space Marines:</h1>
     <table>
         <tr>
@@ -80,11 +83,14 @@ Space Marines
                 <th>6</th>
                 </tr>   
     </table>
+    <footer>
+        mattFay<br>
+        University of Advanced Technology<br>
+        2625 W Baseline Rd, Tempe, AZ 85283<br>
+
+        </footer>
 </body>
 
-<footer>
-mattFay<br>
-</footer>
 <script src="code.js"></script>
 <link rel="stylesheet" type="text/css" href="style.css">
 
