--- a/page4.html
+++ b/page4.html
@@ -1,9 +1,11 @@
 <html>
-<header>
+<head>
 <title>
 Allies
 </title>
+</head>
 <nav>
+    <header>
     <h2>
         Navigation:<br> </h2>
         <a href="./index.html">Home</a><br>
@@ -69,11 +71,14 @@ Allies
                             </tr>
                         
         </table>
-</body>
+        <footer>
+            mattFay<br>
+            University of Advanced Technology<br>
+            2625 W Baseline Rd, Tempe, AZ 85283<br>
+    
+            </footer>
+    </body>
 
-<footer>
-mattFay<br>
-</footer>
 <script src="code.js"></script>
 <link rel="stylesheet" type="text/css" href="style.css">
 
