--- a/page2.html
+++ b/page2.html
@@ -1,22 +1,27 @@
 <html>
-<header>
+<head>
 <title>
 Demons
 </title>
+</head>
 <nav>
-    <h2>
-        Navigation:<br> </h2>
-        <a href="./index.html">Home</a><br>
-        <a href="./page2.html">Demons</a><br>
-        <a href="./page3.html">Space Marines</a><br>
-        <a href="./page4.html">Allies</a><br>
-   
-</nav>
-</header>
+
+
 
 
 
 <body style="text-align: center;">
+    <header>
+        <h2>
+            Navigation:<br> </h2>
+            <a href="./index.html">Home</a><br>
+            <a href="./page2.html">Demons</a><br>
+            <a href="./page3.html">Space Marines</a><br>
+            <a href="./page4.html">Allies</a><br>
+       
+    </nav>
+    </header>
+    
     <h1>Demons:</h1>
     <table>
         <tr>
@@ -83,13 +88,15 @@ Demons
 </tr>
 
     </table>
+    <footer>
+        mattFay<br>
+        University of Advanced Technology<br>
+        2625 W Baseline Rd, Tempe, AZ 85283<br>
 
+        </footer>
 
 </body>
 
-<footer>
-mattFay<br>
-</footer>
 <script src="./code.js"></script>
 <link rel="stylesheet" type="text/css" href="style.css">
 </html>
